--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ boto3 = "^1.34.129"
 
 [tool.poetry.group.dev.dependencies]
 pdoc = "^14.5.0"
+pytest = "^8.2.2"
+pandas = {extras = ["pyarrow"], version = "^2.2.2"}
+numpy = "<2"
 
 [build-system]
 requires = ["poetry-core"]
