--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pdoc = "^14.5.0"
 pytest = "^8.2.2"
 pandas = {extras = ["pyarrow"], version = "^2.2.2"}
 numpy = "<2"
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
