--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11"
 pyspark = "^3.5.1"
 boto3 = "^1.34.129"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pdoc = "^14.5.0"
