--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 pyspark = "^3.5.1"
 boto3 = "^1.34.129"
 pyyaml = "^6.0.1"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 pdoc = "^14.5.0"
